# agentcore-in-action

./: .gitignore  README.md  article_ja.md  pyproject.toml
.kiro/agents/: default-agent.json
.kiro/steering/: design.md  principle.md
mcp-server-with-oauth-gateway/: .env.example  .gitignore  .progress  README.md  construct.py  main.py
mcp-server-with-oauth-gateway/mcp_server_with_oauth_gateway/: callback_inbound.html  callback_outbound.html  interceptor.py  oauth_callback_handler.py  oauth_gateway_infra.yaml  server.py
mcp-server-with-oauth-gateway/tests/: README.md  test_interceptor.py  test_server.py
oauth-gateway-from-agent/: README.md  auth-flow.md  construct.py  debug_step6.md  diagnose_oauth.py  main.py  server.py  test_client.py  verify_callback_config.py
oauth-gateway-from-agent/oauth_gateway_from_agent/: oauth_gateway_infra.yaml
oauth-gateway-from-agent/tests/: README.md  __init__.py  test_config.py  test_interceptor.py
oauth-gateway-from-browser/: .env.example  .progress  README.md  construct.py  main.py  oauth2_callback_server.py
oauth-gateway-from-browser/oauth_gateway_from_browser/: __init__.py  agent.py
oauth-gateway-from-browser/tests/: README.md  test_agent.py  test_oauth2_server.py
say-hello-to-authorized-customer/: .env.example  .gitignore  .progress  README.md  main.py  oauth2_callback_server.py
say-hello-to-authorized-customer/say_hello_to_authorized_customer/: __init__.py  agent.py  config.py  gateway_config.py  identity_config.py  oauth2_callback_server.py
say-hello-to-authorized-customer/tests/: README.md  conftest.py  (+4 more)
