[project]
name = "agentcore-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.1",
    "bedrock-agentcore-starter-toolkit>=0.1.2",
    "boto3>=1.39.9",
    "strands-agents>=1.0.1",
    "strands-agents-tools>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pytest>=8.3.0",
    "selenium>=4.27.0",
]
